fix map legends commit

--- a/templates/cadenas.html
+++ b/templates/cadenas.html
@@ -114,19 +114,19 @@
 
     // Add secondary markers with custom icon
     var secondaryMarker1 = L.marker([30.0622, -111.916503], {icon: energyIcon}).addTo(map);
-    secondaryMarker1.bindPopup("<b>Energy Plant 1</b><br>Location 1.");
+    secondaryMarker1.bindPopup("<b>Unidad Ensambladora: Proveedor Actual</b><br>");
 
     var secondaryMarker2 = L.marker([27.93885, -110.180891], {icon: energyIcon}).addTo(map);
-    secondaryMarker2.bindPopup("<b>Energy Plant 2</b><br>Location 2.");
+    secondaryMarker2.bindPopup("<b>Unidad de Deposición</b><br>");
 
     var secondaryMarker3 = L.marker([30.901046, -109.830322], {icon: mineIcon}).addTo(map);
-    secondaryMarker3.bindPopup("<b>Energy Plant 3</b><br>Location 3.");
+    secondaryMarker3.bindPopup("<b>Refinería de Silicio</b><br>");
 
     var secondaryMarker4 = L.marker([27.919166, -110.8975], {icon: portIcon}).addTo(map);
-    secondaryMarker4.bindPopup("<b>Energy Plant 4</b><br>Location 4.");
+    secondaryMarker4.bindPopup("<b>Puerto de Guaymas: Enlace Logístico</b><br>");
 
     var secondaryMarker5 = L.marker([31.306666, -113.54], {icon: portIcon}).addTo(map);
-    secondaryMarker5.bindPopup("<b>Energy Plant 4</b><br>Location 4.");
+    secondaryMarker5.bindPopup("<b>Puerto Peñasco: Enlace Logístico</b><br>");
 
     // Add mouseover and mouseout events for secondary markers
     secondaryMarker1.on('mouseover', function() {
