new additions to map, financing html

--- a/templates/cadenas.html
+++ b/templates/cadenas.html
@@ -59,7 +59,7 @@
 <body>
 
 <header>
-    <h1>Tu empresa está conectada con el Sector Semiconductor</h1>
+    <h1>Tu empresa está conectada con el Sector Semiconductor en Sonora</h1>
 </header>
 
 <div id="map"></div>
@@ -169,7 +169,7 @@
 
     legend.onAdd = function (map) {
         var div = L.DomUtil.create('div', 'legend');
-        div.innerHTML += '<h4>DEMO</h4>';
+        div.innerHTML += '<h4>DEMO: La localización de los puertos es real, las demás figuras son ejemplos</h4>';
         return div;
     };
 
