--- a/templates/fin.html
+++ b/templates/fin.html
@@ -170,25 +170,41 @@
         <!-- Credit Score Explanation -->
         <div class="credit-score-details">
             <ul>
-                <li><span class="material-icons">done</span> 35% Historial de pagos </li>
-                <li><span class="material-icons">done</span> 30% Cadena de Valor </li>
-                <li><span class="material-icons">done</span> 10% Tipo de financiamiento</li>
-                <li><span class="material-icons">done</span> 25% Flujo de efectivo</li>
+                <li><span class="material-icons">done</span> 30% Historial de pagos </li>
+                <li><span class="material-icons">done</span> 30% Sector Económico </li>
+                <li><span class="material-icons">done</span> 20% Región</li>
+                <li><span class="material-icons">done</span> 20% Flujo de efectivo</li>
             </ul>
         </div>
     </section>
 
     <!-- Machine Learning Models Section -->
     <section class="ml-section">
-        <h2><span class="material-icons">computer</span>Modelos de Inteligencia Artificial en el credit scoring</h2>
+        <h2><span class="material-icons">computer</span>Modelos de IA implementados para el Credit Score</h2>
 
         <!-- Machine Learning Explanation -->
         <div class="ml-details">
             <ul>
-                <li><span class="material-icons">lightbulb</span> Regresión logística: Predice la probabilidad de que un usuario deje de pagar un préstamo.</li>
-                <li><span class="material-icons">lightbulb</span> Árboles de decisión: Divide los datos en ramas en función de patrones financieros para predecir la solvencia crediticia.</li>
-                <li><span class="material-icons">lightbulb</span> Redes neuronales: Utiliza un enfoque por capas para identificar relaciones complejas entre factores como los ingresos, el historial de pagos y la puntuación crediticia.</li>
-                <li><span class="material-icons">lightbulb</span> Random Forest: Una combinación de árboles de decisión para mejorar la precisión de la predicción.</li>
+                <li>
+                    <span class="material-icons">lightbulb</span> 
+                    <strong><span style="font-size: 20px; display: block;">Regresión logística</span></strong>  
+                    <span style="font-size: 15px; display: block; margin-left: 8px;">Predice la probabilidad de que un usuario deje de pagar un préstamo.</span>
+                </li>
+                <li>
+                    <span class="material-icons">lightbulb</span> 
+                    <strong><span style="font-size: 20px; display: block;">Árboles de decisión</span></strong>  
+                    <span style="font-size: 15px; display: block; margin-left: 25px;">Divide los datos en ramas en función de patrones financieros para predecir la solvencia crediticia.</span>
+                </li>
+                <li>
+                    <span class="material-icons">lightbulb</span> 
+                    <strong><span style="font-size: 20px; display: block;">Neural Networks</span></strong>  
+                    <span style="font-size: 15px; display: block; margin-left: 15px;">Utiliza un enfoque por capas para identificar relaciones complejas entre factores como los ingresos, el historial de pagos y la puntuación crediticia.</span>
+                </li>
+                <li>
+                    <span class="material-icons">lightbulb</span> 
+                    <strong><span style="font-size: 20px; display: block;">Random Forest</span></strong>  
+                    <span style="font-size: 15px; display: block; margin-left: 30px;"> Combinación de árboles de decisión para mejorar la precisión de la predicción.</span>
+                </li>
             </ul>
         </div>
     </section>
