--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
             <h1>ConectaMiPYME</h1>
             <nav>
                 <ul>
-                    <li class="highlight">Bienvenido MSMC</li>
+                    <li class="highlight">Bienvenido MEXICAN SEMICONDUCTOR MANUFACTURING COMPANY</li>
                     <li><a href="#">Sobre nosotros</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
@@ -149,7 +149,7 @@
             </div>
             <div class="service">
                 <h3><a href="{{ url_for('views.financiamiento') }}">Financiamientos</a></h3>
-                <p>Próximamente podrás consultar el estado actual de tus financiamientos y nuevas oportunidades.</p>
+                <p>Consulta el estado actual de tus financiamientos y nuevas oportunidades.</p>
             </div>
             <div class="service">
                 <h3><a href="{{ url_for('views.tesoreria') }}">Servicios de Tesorería</a></h3>
