little fix in legend map html

--- a/templates/cadenas.html
+++ b/templates/cadenas.html
@@ -169,7 +169,7 @@
 
     legend.onAdd = function (map) {
         var div = L.DomUtil.create('div', 'legend');
-        div.innerHTML += '<h4>DEMO: La localización de los puertos es real, las demás figuras son ejemplos</h4>';
+        div.innerHTML += '<h4>Versión PRE-ALPHA</h4>';
         return div;
     };
 
